[package]
name = "ryoiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ryoiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
owo-colors = "4"
comfy-table = "7"
serde_json = "1"
dirs = "5"
