[package]
name = "ryoiki"
version = "0.1.0"
edition = "2024"
description = "Jujutsu (jj) ワークスペースを管理する CLI ツール — 領域展開"
license = "MIT"
repository = "https://github.com/UtakataKyosui/ryoiki"
homepage = "https://github.com/UtakataKyosui/ryoiki"
readme = "README.md"
keywords = ["jujutsu", "jj", "workspace", "cli", "vcs"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "SPEC.md"]

[[bin]]
name = "ryoiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
owo-colors = "4"
comfy-table = "7"
serde_json = "1"
dirs = "5"
